tests/machine/x/python/in_operator_extended.error
true
false
Traceback (most recent call last):
  File "/workspace/mochi/tests/machine/x/python/in_operator_extended.py", line 33, in <module>
    print(_fmt(str("a" in m).lower()))
                   ^^^^^^^^
  File "/workspace/mochi/tests/machine/x/python/in_operator_extended.py", line 11, in __getitem__
    return getattr(self, key)
           ^^^^^^^^^^^^^^^^^^
TypeError: attribute name must be string, not 'int'
